[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainScene/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://audio/enemyDestroyedSFXOGG.ogg" type="AudioStream" id=2]
[ext_resource path="res://audio/gameOverSFX2.wav" type="AudioStream" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_right = 1.0
margin_left = 0.315002
margin_top = 10.315
margin_right = 0.315002
margin_bottom = 24.315
text = "00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
margin_left = 140.0
margin_top = 280.0
margin_right = 280.0
margin_bottom = 264.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0.0117647, 0.0117647, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.301961, 0.141176, 0.141176, 1 )
text = "GAME OVER!"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyDestroyedSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 140, 280 )
scale = Vector2( 2, 2 )
stream = ExtResource( 2 )
volume_db = -20.0

[node name="GameOverSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 140, 280 )
scale = Vector2( 2, 2 )
stream = ExtResource( 3 )
volume_db = -20.0
